# twitter-video-translator

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  main.py  pyproject.toml
docs/: API_GUIDE.md  DEVELOPMENT.md  audio-processing-architecture.md  concurrent_issue_analysis.md  concurrent_processing_design.md  index.md  issue.md  migration_plan.md  plan.md  processing-flow.md  tts-prompt-generation-design.md
scripts/: create_test_video.py  test_local_video.py  test_youtube.py
src/twitter_video_translator/: __init__.py  cli.py  config.py  constants.py
src/twitter_video_translator/models/: __init__.py  transcription.py  translation.py  tts.py  video.py
src/twitter_video_translator/services/: audio_style_analyzer.py  downloader.py  session_manager.py  transcriber.py  translator.py  tts.py  tts_with_prompts.py  video_composer.py
src/twitter_video_translator/utils/: logger.py  subtitle.py
tests/: test_audio_style.py  test_downloader.py  test_integration.py  test_segment_validation.py  test_subtitle.py
